@@ -152,6 +152,23 @@
 </tt></td>
 			  </tr>
 			</table>
+			The general idea behind this is to make an input
+			parameter out of any configuration attribute
+			that's not already automatically handled by an
+			input parameter. You can even make up your own
+			configuration attribute names, for purposes of
+			passing data from the search form to the results
+			output. You're not restricted to the existing
+			attribute names. The attributes listed in the
+			allow_in_form list will be settable in the search
+			form using input parameters of the same name, and
+			will be propagated to the follow-up search form
+			in the results template using template variables
+			of the same name in upper-case. You can also make
+			select lists out of any of these input parameters,
+			in the follow-up search form, using the
+			<a href="#build_select_lists">build_select_lists</a>
+			configuration attribute.
 		  </dd>
 		  <dt>
 			<em>example:</em>
@@ -747,7 +764,8 @@
 			name list attribute which enumerates all the
 			choices to put in the list. It can be used for
 			existing input parameters, as well as any you
-			define using the allow_in_form attribute. The
+			define using the <a href="#allow_in_form">
+			allow_in_form</a> attribute. The
 			entries in this list each consist of an octuple,
 			a set of eight strings defining the variables
 			and how they are to be used to build a select
@@ -948,7 +966,6 @@
 				<td nowrap>
 				  http://www.htdig.org/ml/ \<br>
 				  .html \<br>
-				  http://dev.htdig.org/ \<br>
 				  http://www.htdig.org/<br>
 				</td>
 			  </tr>
@@ -3196,12 +3213,13 @@
 		  <dd>
 			This specifies a set of patterns that all URLs have to
 			match against in order for them to be included in the
-			search. Unlike the limit_urls_to directive, this is done
-			<b>after</b> the URL is normalized and the server_aliases
-			directive is applied. This allows filtering after any
+			search. Unlike the limit_urls_to attribute, this is done
+			<b>after</b> the URL is normalized and the
+			<a href="#server_aliases">server_aliases</a>
+			attribute is applied. This allows filtering after any
 			hostnames and DNS aliases are resolved. Otherwise, this
-			directive is the same as the <a
-			href="#limit_urls_to">limit_urls_to</a> directive.
+			attribute is the same as the <a
+			href="#limit_urls_to">limit_urls_to</a> attribute.
 		  </dd>
 		  <dt>
 			<em>example:</em>
@@ -6287,10 +6305,15 @@
 			<em>description:</em>
 		  </dt>
 		  <dd>
-			This directive tells the indexer that servers have several
+			This attribute tells the indexer that servers have several
 			DNS aliases, which all point to the same machine and are NOT
 			virtual hosts. This allows you to ensure pages are indexed
 			only once on a given machine, despite the alias used in a URL.
+			As shown in the example, the mapping goes from left to right,
+			so the server name on the right hand side is the one that is
+			used. As of version 3.1.3, the port number is optional, and is
+			assumed to be 80 if omitted. There is no easy way to map all
+			ports from one alias to another without listing them all.
 		  </dd>
 		  <dt>
 			<em>example:</em>
@@ -6340,12 +6363,12 @@
 			<em>description:</em>
 		  </dt>
 		  <dd>
-			This directive tells htdig to limit the dig to retrieve a maximum
+			This attribute tells htdig to limit the dig to retrieve a maximum
 			number of documents from each server. This can cause
 			unusual behavior on update digs since the old URLs are
 			stored alphabetically. Therefore, update digs will add
 			additional URLs in pseudo-alphabetical order, up to the
-			limit of the directive. However, it is most useful to
+			limit of the attribute. However, it is most useful to
 			partially index a server as the URLs of additional
 			documents are entered into the database, marked as never
 			retrieved.
@@ -6388,12 +6411,12 @@
 			<em>description:</em>
 		  </dt>
 		  <dd>
-			This directive tells htdig to ensure a server has had a
+			This attribute tells htdig to ensure a server has had a
 			delay (in seconds) from the beginning of the last
 			connection. This can be used to prevent "server abuse"
 			by digging without delay. It's recommended to set this
 			to 10-30 (seconds) when indexing servers that you don't
-			monitor yourself. Additionally, this directive can slow
+			monitor yourself. Additionally, this attribute can slow
 			down local indexing if set, which may or may not be what
 			you intended.
 		  </dd>
@@ -7734,7 +7757,14 @@
 			Note that when this attribute is changed, the
 			database should be rebuilt, unless the effect of
 			"moving" the affected URLs in the database is
-			wanted, as described above.
+			wanted, as described above.<br>
+			<strong>Please note:</strong> Don't just copy the
+			example below into a single configuration file.
+			There are two separate settings of
+			<em>url_part_aliases</em> below; the first one is
+			for the configuration file to be used by htdig,
+			htmerge, and htnotify, and the second one is for the
+			configuration file to be used by htsearch.
 		  </dd>
 		  <dt>
 			<em>example:</em>
@@ -8186,11 +8216,8 @@
 	  </dd>
 	</dl>
 	<hr size="4" noshade>
-	<address>
-	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
-	</address>
 <!-- hhmts start -->
-Last modified: $Date: 2001/07/26 20:08:50 $
+Last modified: $Date: 2001/08/29 15:32:07 $
 <!-- hhmts end -->
   </body>
 </html>
